# Agentic-RAG-Flutter-App

./: .env.example  .env_sample  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pinecone-db.py  pinecone-multimodal-pipeline.py  requirements-backend.txt  requirements-synapsememo.txt  requirements.txt
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: .env.example  README.md  pubspec.yaml
app/ios/: Podfile
app/lib/: backend_api.dart  chat.dart  chat_message.dart  main.dart  memory_store.dart  openai.dart  pinecone.dart
app/test/: widget_test.dart
backend/: auth.py  config.py  llm.py  main.py  requirements.txt  schemas.py  service.py
core/: pyproject.toml
core/pinecone_rag/: __init__.py  chunking.py  config.py  document_loaders.py  models.py  pinecone_client.py
core/pinecone_rag/embeddings/: __init__.py  aws_nova_provider.py  azure_provider.py  openai_provider.py  vertex_provider.py
data/txt/: hard_to_find_test_data.txt  (+2 more)
docs/: azure-openai-langchain-rag.ipynb
legacy/: findings.md  ingest-legacy.py  ingest-openai.py  ingest-vertex.py  pincecone-openai-load.py  pinecone-db.py  pinecone-legacy-rag.py  pinecone-openai-load.py  progress.md  run-all-providers.py  task_plan.md
providers/: __init__.py  entrypoint_common.py  router.py
scripts/: download_test_data.sh  run_backend.sh
tests/: test_backend_api.py  test_backend_service.py  test_multimodal_pipeline.py  test_pinecone_db.py  test_provider_scripts.py
txts/: inauguration.txt  my_grades.txt
(+144 files in other folders)
